Actualización de ejercicios ealvite

--- a/Ejercicios Panda Ealvite.ipynb
+++ b/Ejercicios Panda Ealvite.ipynb
@@ -20,28 +20,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Lunes        100\n",
-      "Martes       150\n",
-      "Miercoles    200\n",
-      "Jueves        50\n",
-      "Viernes      300\n",
-      "dtype: int64\n",
-      "Accede al valor del Miercoles\n",
-      "200\n",
-      "Ventas de la semana\n",
-      "800\n",
-      "Ventas mayores a 100\n",
-      "Martes       150\n",
-      "Miercoles    200\n",
-      "Viernes      300\n",
-      "dtype: int64\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m#Parte 1\u001b[39;00m\n\u001b[0;32m      4\u001b[0m ventas \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mSeries([\u001b[38;5;241m100\u001b[39m,\u001b[38;5;241m150\u001b[39m,\u001b[38;5;241m200\u001b[39m,\u001b[38;5;241m50\u001b[39m,\u001b[38;5;241m300\u001b[39m],index\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLunes\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMartes\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMiercoles\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mJueves\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mViernes\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
      ]
     }
    ],
@@ -136,21 +126,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  Producto  Ventas  Precios\n",
-      "0   Laptop      30     1000\n",
-      "1    Mouse     120       50\n",
-      "2  Teclado      75       80\n",
-      "  Producto  Ventas  Precios  ImporteTotal\n",
-      "0   Laptop      30     1000         30000\n",
-      "1    Mouse     120       50          6000\n",
-      "2  Teclado      75       80          6000\n"
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 5\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Parte 1\u001b[39;00m\n\u001b[0;32m      2\u001b[0m VentasProductosData \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mProducto\u001b[39m\u001b[38;5;124m'\u001b[39m:[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLaptop\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMouse\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTeclado\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[0;32m      3\u001b[0m                        \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mVentas\u001b[39m\u001b[38;5;124m'\u001b[39m:[\u001b[38;5;241m30\u001b[39m,\u001b[38;5;241m120\u001b[39m,\u001b[38;5;241m75\u001b[39m],\n\u001b[0;32m      4\u001b[0m                        \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPrecios\u001b[39m\u001b[38;5;124m'\u001b[39m:[\u001b[38;5;241m1000\u001b[39m,\u001b[38;5;241m50\u001b[39m,\u001b[38;5;241m80\u001b[39m]}\n\u001b[1;32m----> 5\u001b[0m dfProductos \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241m.\u001b[39mDataFrame(VentasProductosData)\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(dfProductos)\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m# Parte 2\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# Agrega columna ImporteTotal\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
      ]
     }
    ],
@@ -161,6 +148,7 @@
     "                       'Precios':[1000,50,80]}\n",
     "dfProductos = pd.DataFrame(VentasProductosData)\n",
     "print(dfProductos)\n",
+    "\n",
     "\n",
     "# Parte 2\n",
     "# Agrega columna ImporteTotal\n",
