--- a/2. Ejercicios Panda Crodrig.ipynb
+++ b/2. Ejercicios Panda Crodrig.ipynb
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -205,12 +205,17 @@
       "1       Luis    85.000000  92.000000  81.666667\n",
       "2      Maria    84.333333  85.000000  80.000000\n",
       "3     Carlos    78.000000  88.333333  90.000000\n",
+      "  Estudiante       Math    Science    History\n",
+      "0        Ana  90.000000  88.000000  75.000000\n",
+      "1       Luis  85.000000  92.000000  81.666667\n",
+      "2      Maria  84.333333  85.000000  80.000000\n",
+      "3     Carlos  78.000000  88.333333  90.000000\n",
       "Calificacion Promedio\n",
-      "  Estudiante  Matematicas    Ciencia   Historia  CalificacionPromedio\n",
-      "0        Ana    90.000000  88.000000  75.000000             79.333333\n",
-      "1       Luis    85.000000  92.000000  81.666667             85.111111\n",
-      "2      Maria    84.333333  85.000000  80.000000             81.666667\n",
-      "3     Carlos    78.000000  88.333333  90.000000             89.444444\n"
+      "  Estudiante       Math    Science    History  CalificacionPromedio\n",
+      "0        Ana  90.000000  88.000000  75.000000             84.333333\n",
+      "1       Luis  85.000000  92.000000  81.666667             86.222222\n",
+      "2      Maria  84.333333  85.000000  80.000000             83.111111\n",
+      "3     Carlos  78.000000  88.333333  90.000000             85.444444\n"
      ]
     }
    ],
@@ -225,6 +230,7 @@
     "print(dfEstudiantes)\n",
     "\n",
     "# Parte 2\n",
+    "# Rellena los valores faltantes con la media de cada columna\n",
     "dfEstudiantes.at[1, 'Historia'] =  dfEstudiantes['Historia'].mean()\n",
     "dfEstudiantes.at[2, 'Matematicas'] =  dfEstudiantes['Matematicas'].mean()\n",
     "dfEstudiantes.at[3, 'Ciencia'] =  dfEstudiantes['Ciencia'].mean()\n",
@@ -232,15 +238,15 @@
     "print('Resultados de la Media')\n",
     "print(dfEstudiantes)\n",
     "\n",
-    "# Agrega columna CalificacionPromedio\n",
-    "dfEstudiantes['CalificacionPromedio'] = (dfEstudiantes['Ciencia']+dfEstudiantes['Historia']+dfEstudiantes['Historia'])/3\n",
-    "\n",
-    "print('Calificacion Promedio')\n",
+    "# Renombra las columnas de las materias en ingles\n",
+    "dfEstudiantes.rename(columns={'Historia': 'History', 'Matematicas': 'Math', 'Ciencia':'Science'}, inplace=True)\n",
     "print(dfEstudiantes)\n",
     "\n",
+    "# Agrega columna CalificacionPromedio\n",
+    "dfEstudiantes['CalificacionPromedio'] = (dfEstudiantes['Science']+dfEstudiantes['History']+dfEstudiantes['Math'])/3\n",
     "\n",
-    "\n",
-    "      \n"
+    "print('Calificacion Promedio')\n",
+    "print(dfEstudiantes)\n"
    ]
   }
  ],
