--- a/4. Ejercicios.ipynb
+++ b/4. Ejercicios.ipynb
@@ -384,16 +384,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax. Perhaps you forgot a comma? (2167098035.py, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[99], line 6\u001b[1;36m\u001b[0m\n\u001b[1;33m    df_ventas['Descuento'] = df_ventas['Precio'].apply(lambda x: x * 0.1 if x > 100 else x 0.5)\u001b[0m\n\u001b[1;37m                                                                                         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Producto</th>\n",
+       "      <th>Precio</th>\n",
+       "      <th>Cantidad</th>\n",
+       "      <th>TotalVentas</th>\n",
+       "      <th>Descuento</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Café</td>\n",
+       "      <td>120</td>\n",
+       "      <td>3</td>\n",
+       "      <td>360</td>\n",
+       "      <td>108.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Té</td>\n",
+       "      <td>80</td>\n",
+       "      <td>5</td>\n",
+       "      <td>400</td>\n",
+       "      <td>76.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Jugo</td>\n",
+       "      <td>90</td>\n",
+       "      <td>2</td>\n",
+       "      <td>180</td>\n",
+       "      <td>85.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Agua</td>\n",
+       "      <td>60</td>\n",
+       "      <td>8</td>\n",
+       "      <td>480</td>\n",
+       "      <td>57.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Producto  Precio  Cantidad  TotalVentas  Descuento\n",
+       "0     Café     120         3          360      108.0\n",
+       "1       Té      80         5          400       76.0\n",
+       "2     Jugo      90         2          180       85.5\n",
+       "3     Agua      60         8          480       57.0"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -402,7 +471,8 @@
     "df_ventas\n",
     "\n",
     "# Parte 2\n",
-    "##df_ventas['Descuento'] = df_ventas['Precio'].apply(lambda x: x * 0.1 if x > 100 else x 0.5)\n",
+    "df_ventas['Descuento'] = df_ventas['Precio'].apply(lambda x: x-(x*0.1) if x > 100 else  x-(x*0.05))\n",
+    "\n",
     "df_ventas\n",
     "\n",
     "##df_productos['PrecioMayor120'] = df_productos['Precio'].apply(lambda x: x > 120,'Si')"
@@ -418,16 +488,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 137,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Cliente</th>\n",
+       "      <th>Dirección</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Juan Pérez</td>\n",
+       "      <td>calle falsa 123</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Ana Ruiz</td>\n",
+       "      <td>Calle PRINCIPAL 45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Pedro López</td>\n",
+       "      <td>AV. LOS robles 34</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Cliente           Dirección\n",
+       "0   Juan Pérez     calle falsa 123\n",
+       "1     Ana Ruiz  Calle PRINCIPAL 45\n",
+       "2  Pedro López   AV. LOS robles 34"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data_clientes = {\n",
     "    'Cliente': ['Juan Pérez', 'Ana Ruiz', 'Pedro López'],\n",
     "    'Dirección': ['calle falsa 123', 'Calle PRINCIPAL 45', 'AV. LOS robles 34']\n",
     "}\n",
     "\n",
-    "df_clientes = pd.DataFrame(data_clientes)"
+    "df_clientes = pd.DataFrame(data_clientes)\n",
+    "df_clientes"
    ]
   },
   {
@@ -441,10 +569,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 139,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:9: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "<>:9: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "C:\\Users\\cgrod\\AppData\\Local\\Temp\\ipykernel_13060\\3364547382.py:9: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "  df_clientes['Numero'] = df_clientes['Dirección'].str.extract('(\\d)')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Cliente</th>\n",
+       "      <th>Dirección</th>\n",
+       "      <th>Numero</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Juan Pérez</td>\n",
+       "      <td>calle falsa 123</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Ana Ruiz</td>\n",
+       "      <td>calle principal 45</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Pedro López</td>\n",
+       "      <td>avenidaenida. los robles 34</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Cliente                    Dirección Numero\n",
+       "0   Juan Pérez              calle falsa 123      1\n",
+       "1     Ana Ruiz           calle principal 45      4\n",
+       "2  Pedro López  avenidaenida. los robles 34      3"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Parte 1\n",
+    "df_clientes['Dirección'] = df_clientes['Dirección'].str.lower()\n",
+    "df_clientes\n",
+    "\n",
+    "#Parte 2\n",
+    "df_clientes['Dirección'] = df_clientes['Dirección'].str.replace(\"av\",\"avenida\")\n",
+    "\n",
+    "#Parte 3\n",
+    "df_clientes['Numero'] = df_clientes['Dirección'].str.extract('(\\d+)')\n",
+    "df_clientes\n",
+    "                                                                \n",
+    "                                                                \n"
+   ]
   }
  ],
  "metadata": {
